@@ -69,7 +69,7 @@ public class AdjustablePortrayal2D extends SimplePortrayal2D
         {
         SimplePortrayal2D child = getChild(object);
         child.draw(object,graphics,info);
-        if (info.selected)
+        if (info.selected && object!=null && (object instanceof Oriented2D || object instanceof Scalable2D))
             {
             double orientation = 0.0;
             double scale = 1.0;
@@ -89,7 +89,9 @@ public class AdjustablePortrayal2D extends SimplePortrayal2D
             graphics.fill(knob);
             }
         }
-        
+		
+		
+		
     boolean adjusting = false;
     Object adjustingObject = null;
     double adjustingInitialScale = 1.0;
@@ -99,7 +101,9 @@ public class AdjustablePortrayal2D extends SimplePortrayal2D
         {
         Point2D.Double myPosition = ((FieldPortrayal2D)(wrapper.getFieldPortrayal())).getObjectPosition(wrapper.getObject(), range);
         Object object = wrapper.getObject();
-        if (adjusting && adjustingObject != object)  // we're not portraying the relevant object
+        if (object == null ||							// something is very wrong!
+			(adjusting && adjustingObject != object) || // we're not portraying the relevant object
+			!((object instanceof Scalable2D || object instanceof Orientable2D))) // it's neither scalable nor orientable
             return getChild(wrapper.getObject()).handleMouseEvent(manipulating, wrapper, event, range, type);  // let any lower portrayals have it
                 
         double orientation = 0.0;
